# marco

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .travis.yml  :  CMakeCache.txt  CMakeLists.txt  Jenkinsfile  README.md  archivos_con_criticos.txt  archivos_con_criticos_nuevo.txt  clang_tidy_ast_report.txt  cpp_with_issues.txt  critical_warnings.txt  critical_warnings_final.txt  critical_warnings_nueva_pasada.txt  cuenta_warnings_por_archivo.txt  extra.cmake  files_with_warnings.txt  fish_dbg_env.fish  fish_rel_env.fish  headers-to-fix.txt  marcoMacros.cmake  model.mo  modelicaMacros.cmake  omc.md  revisar_Function.txt  run-marco.sh
docs/: BuildOnLinuxMacOS.md  CMakeLists.txt  Dependencies.md  Dialects.md  Doxyfile  OMC.md  Overview.md  ParserErrorDoxyfile  ProjectStructure.md  RuntimeLibraries.md  TestCases.md  devcontainer.json  doxygen.cfg.in
docs/legalization-scripts/: methanol.py  thermalchipdae.py  thermalchipoo.py
frontend/: CMakeLists.txt
frontend/src/: Dumper.cpp  Expr.cpp  Lexer.cpp  LexerStateMachine.cpp  Parser.cpp  ParserAlgotithm.cpp  ParserClasses.cpp  ParserEquation.cpp  ParserErrors.cpp  ParserStatement.cpp
frontend/test/: CMakeLists.txt
lib/: CMakeLists.txt
lib/AST/: ASTNode.cpp  BuiltInFunction.cpp  CMakeLists.txt  Errors.cpp  LexerStateMachine.cpp  Parser.cpp  Pass.cpp  Symbol.cpp  SymbolTable.cpp
lib/Codegen/: ArrayDescriptor.cpp  Bridge.cpp  CMakeLists.txt  FunctionCallBridge.cpp  NewBridge.cpp  Options.cpp  Reference.cpp  Runtime.cpp  Utils.cpp  Verifier.cpp
lib/Diagnostic/: CMakeLists.txt  Diagnostic.cpp  Location.cpp  LogMessage.cpp  Printer.cpp
lib/Dialect/: CMakeLists.txt
lib/Driver/: CMakeLists.txt  Driver.cpp
lib/Frontend/: CMakeLists.txt  CodegenOptions.cpp  CompilerInstance.cpp  CompilerInvocation.cpp  DiagnosticHandler.cpp  ExecuteCompilerInvocation.cpp  FrontendAction.cpp  FrontendActions.cpp  FrontendOptions.cpp  LanguageOptions.cpp  Options.cpp  Passes.cpp  SimulationOptions.cpp  TextDiagnostic.cpp  TextDiagnosticBuffer.cpp  TextDiagnosticPrinter.cpp
lib/IO/: CMakeLists.txt  Command.cpp  InputFile.cpp
lib/JIT/: CMakeLists.txt  EngineBuilder.cpp
lib/Lexer/: CMakeLists.txt  Location.cpp
lib/Modeling/: AccessFunction.cpp  AccessFunctionAffineConstant.cpp  AccessFunctionAffineMap.cpp  AccessFunctionConstant.cpp  AccessFunctionEmpty.cpp  AccessFunctionGeneric.cpp  AccessFunctionRotoTranslation.cpp  AccessFunctionZeroDims.cpp  AccessFunctionZeroResults.cpp  ArrayEquationsDependencyGraph.cpp  ArrayVariablesDependencyGraph.cpp  CMakeLists.txt  Dependency.cpp  DimensionAccess.cpp  DimensionAccessAdd.cpp  DimensionAccessConstant.cpp  DimensionAccessDimension.cpp  DimensionAccessDiv.cpp  DimensionAccessIndices.cpp  DimensionAccessMul.cpp  DimensionAccessRange.cpp  DimensionAccessSub.cpp  Dumpable.cpp  Graph.cpp  IndexReduction.cpp  IndexSet.cpp  IndexSetList.cpp  IndexSetRTree.cpp  LocalMatchingSolutions.cpp  LocalMatchingSolutionsMCIM.cpp  LocalMatchingSolutionsVAF.cpp  MCIM.cpp  MCIMFlat.cpp  MCIMGroup.cpp  MCIMGroupAffineConstant.cpp  MCIMGroupEmpty.cpp  MCIMGroupGeneric.cpp  MCIMRegular.cpp  Matching.cpp  MultidimensionalRange.cpp  (+11 more)
lib/Options/: CMakeLists.txt  Options.cpp
lib/Parser/: CMakeLists.txt  Level.cpp  Location.cpp  Message.cpp  ModelicaStateMachine.cpp  Parser.cpp  Token.cpp
lib/Runtime/: BuiltInFunctions.cpp  CLI.cpp  CMakeLists.txt  IDA.cpp  IO.cpp  Math.cpp  MemoryManagement.cpp  Print.cpp  Profiling.cpp  Runtime.cpp  UtilityFunctions.cpp
lib/Transforms/: CMakeLists.txt  DataRecomputation.cpp
lib/Utils/: CMakeLists.txt  Lexer.cpp  LogMessage.cpp  SourcePosition.cpp  VariableFilter.cpp
lib/VariableFilter/: AST.cpp  CMakeLists.txt  Error.cpp  Filter.cpp  LexerStateMachine.cpp  Parser.cpp  Range.cpp  Token.cpp  Tracker.cpp  VariableFilter.cpp
lib/ast/: CMakeLists.txt  Errors.cpp  LexerStateMachine.cpp  Parser.cpp  Symbol.cpp  SymbolTable.cpp
lib/codegen/: CMakeLists.txt  CodeGen.cpp  Options.cpp  Reference.cpp  Runner.cpp
lib/diagnostic/: CMakeLists.txt  Diagnostic.cpp  Location.cpp  LogMessage.cpp
lib/embedded_runtime/: .gitignore  64to32.py  Makefile
lib/frontend/: CMakeLists.txt  CompilerInstance.cpp  CompilerInvocation.cpp  FrontendAction.cpp  FrontendActions.cpp  FrontendOptions.cpp  Options.cpp  SimulationOptions.cpp  TextDiagnostic.cpp  TextDiagnosticBuffer.cpp  TextDiagnosticPrinter.cpp  frontendConfig.cmake
lib/frontendTool/: CMakeLists.txt  ExecuteCompilerInvocation.cpp
lib/ida/: CMakeLists.txt  idaConfig.cmake
lib/lowerer/: CMakeLists.txt  lowererConfig.cmake
lib/matching/: CMakeLists.txt  matchingConfig.cmake
lib/mlirlowerer/: CMakeLists.txt  mlirlowererConfig.cmake
lib/model/: CMakeLists.txt  modelConfig.cmake
lib/modeling/: AccessFunction.cpp  CMakeLists.txt  Dependency.cpp  Dumpable.cpp  Graph.cpp  IndexSet.cpp  LocalMatchingSolutions.cpp  LocalMatchingSolutionsMCIM.cpp  LocalMatchingSolutionsVAF.cpp  MCIM.cpp  MCIMFlat.cpp  MCIMRegular.cpp  MCIS.cpp  Matching.cpp  MultidimensionalRange.cpp  MultidimensionalRangeRagged.cpp  Point.cpp  Range.cpp  RangeRagged.cpp  Scheduling.cpp
lib/omcToModel/: CMakeLists.txt  omcToModelConfig.cmake
lib/passes/: CMakeLists.txt  passesConfig.cmake
lib/runtime/: BuiltInFunctions.cpp  CMakeLists.txt  DoubleToFixed.cpp  Fdlibm.cpp  IDA.cpp  Math.cpp  MemoryManagement.cpp  Nostdlib.cpp  Print.cpp  Profiling.cpp  ProfilingEmbedded.cpp  Runtime.cpp  UtilityFunctions.cpp  msvc_asm_cos.asm  msvc_asm_sin.asm  msvc_asm_sqrt.asm
lib/simulation/: CMakeLists.txt
lib/simulationGenerator/: CMakeLists.txt
lib/solver/: CMakeLists.txt
lib/utils/: CMakeLists.txt  Interval.cpp  Lexer.cpp  LogMessage.cpp  Range.cpp  Shape.cpp  SourcePosition.cpp  VariableFilter.cpp
lowerer/: CMakeLists.txt
lowerer/src/: Expression.cpp  SimErrors.cpp  SimExp.cpp  SimLowerer.cpp  SimType.cpp  Simulation.cpp
lowerer/test/: CMakeLists.txt
runtime/: CMakeLists.txt
runtime/lib/: CMakeLists.txt
runtime/src/: PrintFunctions.cpp
runtime/unittest/: BuiltInFunctionsTest.cpp  CMakeLists.txt  MathTest.cpp  (+2 more)
unittest/: CMakeLists.txt
(+5826 files in other folders)
